--- a/src/app/production/produit/list-produit/list-produit.component.html
+++ b/src/app/production/produit/list-produit/list-produit.component.html
@@ -3,7 +3,15 @@
   <div class="row">
     <div class="col-sm-12">
       <div class="card-box">
-
+        <div class="row">
+          <div class="col-sm-6">
+            <div class="m-b-30">
+              <button id="addProduct" class="btn btn-primary waves-effect waves-light"
+                      [routerLink]="['/production/produit/ajout']">Ajouter Produit<i
+                class="fa fa-plus"></i></button>
+            </div>
+          </div>
+        </div>
         <table [ngBusy]="busy" class="table table-striped table-bordered  dataTable no-footer" id="datatable"
                role="grid" aria-describedby="datatable_info">
           <thead>
