--- a/src/app/full-layout/full-layout.component.html
+++ b/src/app/full-layout/full-layout.component.html
@@ -67,10 +67,19 @@
           <li *ngFor="let component of components" class="has_sub">
             <a href="javascript:void(0);" class="waves-effect">
               <span>{{component.name}}</span>
+              <span *ngIf="component.numberAlertes"
+              class="label label-danger ">
+              {{component.numberAlertes}}</span>
               <span class="menu-arrow"></span></a>
             <ul class="list-unstyled">
               <li *ngFor="let child of component.childrens">
-                <a [routerLink]="child.url">{{child.name}}</a></li>
+                <a [routerLink]="child.url">{{child.name}}
+                  <span *ngIf="child.numberAlertes"
+                                              class="label label-danger ">
+                                              {{child.numberAlertes}}</span>
+                </a>
+
+                              </li>
             </ul>
           </li>
         </ul>
